; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_workqueue.c__wq_thactive_move.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_workqueue.c__wq_thactive_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.workqueue = type { i32*, i32 }

@relaxed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.workqueue*, i32, i32)* @_wq_thactive_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_wq_thactive_move(%struct.workqueue* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.workqueue*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.workqueue* %0, %struct.workqueue** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %6, align 4
  %9 = call i64 @_wq_thactive_offset_for_qos(i32 %8)
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @_wq_thactive_offset_for_qos(i32 %10)
  %12 = sub nsw i64 %9, %11
  store i64 %12, i64* %7, align 8
  %13 = load %struct.workqueue*, %struct.workqueue** %4, align 8
  %14 = getelementptr inbounds %struct.workqueue, %struct.workqueue* %13, i32 0, i32 1
  %15 = load i64, i64* %7, align 8
  %16 = load i32, i32* @relaxed, align 4
  %17 = call i32 @os_atomic_add_orig(i32* %14, i64 %15, i32 %16)
  %18 = load %struct.workqueue*, %struct.workqueue** %4, align 8
  %19 = getelementptr inbounds %struct.workqueue, %struct.workqueue* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = load i32, i32* %5, align 4
  %22 = call i64 @_wq_bucket(i32 %21)
  %23 = getelementptr inbounds i32, i32* %20, i64 %22
  %24 = load i32, i32* %23, align 4
  %25 = add nsw i32 %24, -1
  store i32 %25, i32* %23, align 4
  %26 = load %struct.workqueue*, %struct.workqueue** %4, align 8
  %27 = getelementptr inbounds %struct.workqueue, %struct.workqueue* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i64 @_wq_bucket(i32 %29)
  %31 = getelementptr inbounds i32, i32* %28, i64 %30
  %32 = load i32, i32* %31, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %31, align 4
  ret void
}

declare dso_local i64 @_wq_thactive_offset_for_qos(i32) #1

declare dso_local i32 @os_atomic_add_orig(i32*, i64, i32) #1

declare dso_local i64 @_wq_bucket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
